Sorted Profile Settings (hopefully)

--- a/public/index.html
+++ b/public/index.html
@@ -1496,7 +1496,7 @@
                         <p class="text-sm text-blue-800 mb-3">If you need assistance or want to report a bug, please contact support:</p>
                         <div class="bg-white p-3 rounded border text-xs font-mono text-gray-600">
                             <p><strong>Your User ID:</strong> ${userIdText}</p>
-                            <p><strong>Email:</strong> <a href="mailto:jack@whitehill.group?subject=Support Request - ${userIdText}" class="text-blue-600 hover:underline">support@visittracker.app</a></p>
+                            <p><strong>Email:</strong> <a href="mailto:jack@whitehill.group?subject=Support Request - ${userIdText}" class="text-blue-600 hover:underline">jack@whitehill.group</a></p>
                         </div>
                         <p class="text-xs text-blue-600 mt-2">Include your User ID when contacting support for faster assistance.</p>
                     </div>
