--- a/public/profile.html
+++ b/public/profile.html
@@ -907,6 +907,156 @@
             setupEditProfileEventListeners(modal);
         }
 
+        function setupEditProfileEventListeners(modal) {
+            const form = modal.querySelector('#edit-profile-form');
+            const deleteBtn = modal.querySelector('#delete-account-btn');
+            const user = auth.currentUser;
+            const isSSO = user && user.providerData && user.providerData.length > 0 &&
+                user.providerData.some(provider => provider.providerId !== 'password');
+
+            // Handle form submission
+            form.addEventListener('submit', async (e) => {
+                e.preventDefault();
+
+                try {
+                    // Show loading state
+                    const submitBtn = form.querySelector('button[type="submit"]');
+                    const originalText = submitBtn.innerHTML;
+                    submitBtn.innerHTML = '💾 Saving...';
+                    submitBtn.disabled = true;
+
+                    const selectedConditions = Array.from(form.querySelectorAll('input[name="conditions"]:checked'))
+                        .map(input => input.value);
+
+                    const updatedProfile = {
+                        ...localData.userProfile,
+                        displayName: form.querySelector('#display-name').value.trim(),
+                        dateOfBirth: form.querySelector('#date-of-birth').value || null,
+                        conditions: selectedConditions,
+                        emergencyContact: form.querySelector('#emergency-contact').value.trim() || null,
+                        medicalNotes: form.querySelector('#medical-notes').value.trim() || null,
+                        dataSharing: form.querySelector('#data-sharing').checked,
+                        onboardingCompleted: form.querySelector('#onboarding-completed').checked,
+                        lastUpdated: new Date().toISOString()
+                    };
+
+                    // Handle email update for non-SSO users
+                    if (!isSSO) {
+                        const newEmail = form.querySelector('#email').value.trim();
+                        if (newEmail && newEmail !== user.email) {
+                            // Note: Email updates require re-authentication in Firebase
+                            // For now, we'll just show a message about this
+                            showStatusMessage('Email updates require re-authentication. Please contact support if you need to change your email.', 'error');
+                            submitBtn.innerHTML = originalText;
+                            submitBtn.disabled = false;
+                            return;
+                        }
+                    }
+
+                    // Save profile data
+                    localData.userProfile = updatedProfile;
+                    await saveData();
+
+                    // Update display name in Firebase if it changed
+                    if (updatedProfile.displayName && updatedProfile.displayName !== user.displayName) {
+                        try {
+                            await user.updateProfile({
+                                displayName: updatedProfile.displayName
+                            });
+                            userIdDisplay.textContent = updatedProfile.displayName;
+                        } catch (error) {
+                            console.warn('Could not update Firebase display name:', error);
+                        }
+                    }
+
+                    closeModal(modal);
+                    renderProfile();
+                    showStatusMessage('Profile updated successfully! 🎉', 'success');
+
+                } catch (error) {
+                    console.error('Error updating profile:', error);
+                    showStatusMessage('Error updating profile. Please try again.', 'error');
+
+                    // Reset button state
+                    const submitBtn = form.querySelector('button[type="submit"]');
+                    submitBtn.innerHTML = '💾 Save Profile';
+                    submitBtn.disabled = false;
+                }
+            });
+
+            // Handle account deletion with enhanced confirmation
+            deleteBtn.addEventListener('click', async () => {
+                const dataCount = (localData.medicalRecords?.length || 0) +
+                    (localData.symptomTracking?.length || 0) +
+                    (localData.visitHistory?.length || 0);
+
+                if (!confirm(`⚠️ DELETE ACCOUNT CONFIRMATION\n\nThis will permanently delete:\n• Your profile and settings\n• ${dataCount} health records and entries\n• All visit history and achievements\n\nThis action CANNOT be undone.\n\nAre you sure you want to continue?`)) {
+                    return;
+                }
+
+                // Second confirmation with typing requirement
+                const confirmText = prompt(`To confirm deletion, please type "DELETE MY ACCOUNT" exactly:\n\n(This will permanently delete all your data)`);
+
+                if (confirmText !== 'DELETE MY ACCOUNT') {
+                    showStatusMessage('Account deletion cancelled. The confirmation text did not match.', 'error');
+                    return;
+                }
+
+                try {
+                    // Show deletion progress
+                    deleteBtn.innerHTML = '🗑️ Deleting...';
+                    deleteBtn.disabled = true;
+
+                    // Delete Firestore data
+                    await deleteDoc(docRef);
+
+                    // Delete Firebase Auth account
+                    await user.delete();
+
+                    showStatusMessage('Account deleted successfully. You will be signed out.', 'success');
+
+                    // Redirect after a delay
+                    setTimeout(() => {
+                        window.location.href = '/';
+                    }, 2000);
+
+                } catch (error) {
+                    console.error('Error deleting account:', error);
+
+                    if (error.code === 'auth/requires-recent-login') {
+                        showStatusMessage('For security, please sign out and sign back in, then try deleting your account again.', 'error');
+                    } else {
+                        showStatusMessage('Error deleting account. Please try again or contact support.', 'error');
+                    }
+
+                    // Reset button state
+                    deleteBtn.innerHTML = '🗑️ Delete Account';
+                    deleteBtn.disabled = false;
+                }
+            });
+
+            // Add dynamic condition counter
+            const conditionCheckboxes = modal.querySelectorAll('input[name="conditions"]');
+            const updateConditionCount = () => {
+                const checkedCount = modal.querySelectorAll('input[name="conditions"]:checked').length;
+                let countDisplay = modal.querySelector('#condition-count');
+
+                if (!countDisplay) {
+                    countDisplay = document.createElement('p');
+                    countDisplay.id = 'condition-count';
+                    countDisplay.className = 'text-sm font-medium text-purple-600 mt-2';
+                    modal.querySelector('h3').parentNode.appendChild(countDisplay);
+                }
+
+                countDisplay.textContent = `${checkedCount} condition${checkedCount !== 1 ? 's' : ''} selected`;
+            };
+
+            conditionCheckboxes.forEach(checkbox => {
+                checkbox.addEventListener('change', updateConditionCount);
+            });
+            updateConditionCount(); // Initial count
+        }
+
         function setupAddRecordEventListeners(modal) {
             const form = modal.querySelector('#add-record-form');
 
