didn't work - trying again

--- a/public/profile.html
+++ b/public/profile.html
@@ -1491,8 +1491,7 @@
                     
                     <!-- Close Button -->
                     <div class="flex justify-end pt-4 border-t">
-                        <button onclick="closeModal(document.getElementById('help-modal'))" 
-                                class="px-6 py-2 bg-gray-200 text-gray-800 rounded-lg hover:bg-gray-300 transition-colors">
+                        <button type="button" class="close-modal-btn px-6 py-2 bg-gray-200 text-gray-800 rounded-lg hover:bg-gray-300 transition-colors">
                             Close
                         </button>
                     </div>
