--- a/public/profile.html
+++ b/public/profile.html
@@ -363,7 +363,7 @@
                     <div class="flex items-center justify-between">
                         <div>
                             <h1 class="text-3xl font-bold mb-2">${userId ? (userIdDisplay.textContent || 'User') : 'Guest'}</h1>
-                            <p class="text-purple-100">Member since ${joinDate}</p>
+                            <p class="text-purple-100">Member since: ${joinDate}</p>
                             <p class="text-purple-100">Last activity: ${lastActivity}</p>
                             ${localData.userProfile?.conditions?.length > 0 ? `
                                 <div class="mt-2">
