Add license information to package-lock.json and clean up Firebase imports in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -209,17 +209,17 @@
     <script type="module">
         // Firebase Imports
         import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-app.js";
-        import { getAuth, onAuthStateChanged, signOut, GoogleAuthProvider, signInWithPopup, signInAnonymously } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
-        import { getFirestore, doc, setDoc, onSnapshot, deleteDoc } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
+        import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
+        import { getFirestore, doc, onSnapshot, setDoc, deleteDoc } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
 
         // --- Firebase Configuration ---
-        console.log("Firebase config check:", typeof userFirebaseConfig !== 'undefined' ? 'Found' : 'Missing');
-        console.log("App ID check:", typeof __app_id !== 'undefined' ? __app_id : 'Missing');
-
         const firebaseConfig = typeof userFirebaseConfig !== 'undefined' ? userFirebaseConfig : {};
         const appId = typeof __app_id !== 'undefined' ? __app_id : 'local-dev-app';
 
         let app, db, auth, userId, docRef;
+        let localData = { hospitals: [], ambulance: [], awards: [], visitHistory: [], medicalRecords: [], symptomTracking: [], userProfile: {} };
+        let unsubscribe; // To hold the onSnapshot listener
+
 
         let localData = { hospitals: [], ambulance: [], awards: [], visitHistory: [], medicalRecords: [] };
 
