--- a/public/profile.html
+++ b/public/profile.html
@@ -154,13 +154,12 @@
         import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
         import { getFirestore, doc, onSnapshot, setDoc, deleteDoc } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
 
-        // --- Firebase Configuration ---
         const firebaseConfig = typeof userFirebaseConfig !== 'undefined' ? userFirebaseConfig : {};
         const appId = typeof __app_id !== 'undefined' ? __app_id : 'local-dev-app';
 
         let app, db, auth, userId, docRef;
         let localData = { hospitals: [], ambulance: [], awards: [], visitHistory: [], medicalRecords: [], symptomTracking: [], userProfile: {} };
-        let unsubscribe; // To hold the onSnapshot listener
+        let unsubscribe;
 
         // DOM element references
         const loadingIndicator = document.getElementById('full-page-loader');
