--- a/public/index.html
+++ b/public/index.html
@@ -96,20 +96,7 @@
         <div id="auth-signed-out-view" class="flex flex-col items-end space-y-2">
             <button id="google-signin-btn"
                 class="bg-white text-gray-700 font-semibold py-2 px-4 border border-gray-300 rounded-lg shadow-md hover:bg-gray-50 transition-colors flex items-center w-full justify-center">
-                <svg class="w-5 h-5 mr-2" viewBox="0 0 48 48">
-                    <path fill="#4285F4"
-                        d="M43.611 20.083H42V20H24v8h11.303c-1.649 4.657-6.08 8-11.303 8c-6.627 0-12-5.373-12-12s5.373-12 12-12c3.059 0 5.842 1.154 7.961 3.039l5.657-5.657C34.046 6.053 29.268 4 24 4C12.955 4 4 12.955 4 24s8.955 20 20 20s20-8.955 20-20c0-1.341-.138-2.65-.389-3.917z">
-                    </path>
-                    <path fill="#34A853"
-                        d="M6.306 14.691l6.571 4.819C14.655 15.108 18.961 12 24 12c3.059 0 5.842 1.154 7.961 3.039l5.657-5.657C34.046 6.053 29.268 4 24 4C16.318 4 9.656 8.337 6.306 14.691z">
-                    </path>
-                    <path fill="#FBBC05"
-                        d="M27.461 44.5l5.657-5.657C30.485 41.658 27.214 44 24 44c-5.166 0-9.558-2.922-11.481-7.281l-6.571 4.819C9.656 40.663 16.318 44 24 44z">
-                    </path>
-                    <path fill="#EA4335"
-                        d="M43.611 20.083H42V20H24v8h11.303c-.792 2.237-2.231 4.166-4.087 5.571l5.657 5.657C42.485 36.678 44 31.888 44 24c0-1.341-.138-2.65-.389-3.917z">
-                    </path>
-                </svg>
+                <svg class="w-5 h-5 mr-2" viewBox="0 0 48 48"><path fill="#4285F4" d="M43.611 20.083H42V20H24v8h11.303c-1.649 4.657-6.08 8-11.303 8c-6.627 0-12-5.373-12-12s5.373-12 12-12c3.059 0 5.842 1.154 7.961 3.039l5.657-5.657C34.046 6.053 29.268 4 24 4C12.955 4 4 12.955 4 24s8.955 20 20 20s20-8.955 20-20c0-1.341-.138-2.65-.389-3.917z"></path><path fill="#34A853" d="M6.306 14.691l6.571 4.819C14.655 15.108 18.961 12 24 12c3.059 0 5.842 1.154 7.961 3.039l5.657-5.657C34.046 6.053 29.268 4 24 4C16.318 4 9.656 8.337 6.306 14.691z"></path><path fill="#FBBC05" d="M27.461 44.5l5.657-5.657C30.485 41.658 27.214 44 24 44c-5.166 0-9.558-2.922-11.481-7.281l-6.571 4.819C9.656 40.663 16.318 44 24 44z"></path><path fill="#EA4335" d="M43.611 20.083H42V20H24v8h11.303c-.792 2.237-2.231 4.166-4.087 5.571l5.657 5.657C42.485 36.678 44 31.888 44 24c0-1.341-.138-2.65-.389-3.917z"></path></svg>
                 Sign in with Google
             </button>
             <button id="anon-signin-btn"
