Bind showAddRecordModal function to addRecordBtn click event for improved modal accessibility

--- a/public/profile.html
+++ b/public/profile.html
@@ -1567,7 +1567,7 @@
             // Setup event listeners for this modal
             setupAddRecordEventListeners(modal);
         };
-        window.showAddRecordModal = showAddRecordModal;
+        document.getElementById('addRecordBtn').addEventListener('click', showAddRecordModal);
 
         // Initialize event listeners for static elements after DOM is ready
         document.addEventListener('DOMContentLoaded', () => {
