Refactor Firebase configuration to use external script for improved security and maintainability

--- a/public/index.html
+++ b/public/index.html
@@ -14,17 +14,7 @@
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
         integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
     <!-- Firebase Configuration -->
-    <script>
-        const userFirebaseConfig = {
-            apiKey: "AIzaSyBrmQBFe8jdcQSTu7H8ttjhNd-tmGaTeCg",
-            authDomain: "hospitaltracker-39adb.firebaseapp.com",
-            projectId: "hospitaltracker-39adb",
-            storageBucket: "hospitaltracker-39adb.appspot.com",
-            messagingSenderId: "1004447062283",
-            appId: "1:1004447062283:web:8624b4173fc722a7db6a0e",
-            measurementId: "G-KEK2G7YDDT"
-        };
-    </script>
+    <script src="firebase-config.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
         body {
